<resources>
    <string name="app_name">Just Arrived</string>
    <string name="search_hint">Search for location</string>
    <string name="recipients">Recipients</string>
    <string name="select_contacts">Select recipient</string>
    <string name="message">Message</string>
    <string name="enter_sms_text">Enter SMS text</string>
    <string name="trigger_radius">Trigger radius</string>
    <string name="select_destination">Select destination</string>
    <string name="sms_sent">Destination reached. SMS sent.</string>
    <string name="destination_reached">Destination reached.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="send_sms_or_notification_only">Send message after reaching destination.</string>
    <string name="sms" translatable="false">SMS</string>
    <string name="sms_or_notify_key" translatable="false">SMS_OR_NOTIFY</string>
    <string name="permission_sms_rationale">SMS permission is needed to send SMS.</string>
    <string name="permission_contacts_rationale">Contacts permission is needed to read contacts.</string>
    <string name="permission_location_rationale">Location permission is needed.</string>
    <string name="trigger_radius_key" translatable="false">TRIGGER_RADIUS</string>
    <string name="trigger_radius_default">20 meters</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="trigger_radius_20">20 meters</string>
    <string name="trigger_radius_50">50 meters</string>
    <string name="trigger_radius_100">100 meters</string>
    <string name="trigger_radius_500">500 meters</string>
    <string name="sms_send_result_error">SMS send failed</string>
    <string name="sms_send_result_ok">SMS sent successfully</string>
    <string name="unavailable_while_location_updating">Unavailable while location updating</string>
    <string name="place_selection_failed">Place selection failed</string>
    <string name="my_location">My location</string>
    <string name="open_drawer" translatable="false">Open drawer</string>
    <string name="close_drawer" translatable="false">Close drawer</string>
    <string name="contact_does_not_have_a_number">Contact does not have a number. Select other.</string>
    <string name="notification">Notification</string>
    <string name="chosen_place">Destination</string>
    <string name="choose_place">Select destination</string>
    <string name="cancel">Cancel</string>
    <string name="destination">Destination</string>
    <string name="sms_will_be_sent">SMS will be sent as soon as you reach the chosen location.</string>
    <string name="notification_will_be_shown">Notification will be shown as soon as you reach the chosen location. SMS will not be sent.</string>
    <string name="place_not_updated">Place cannot be chosen while updating location.</string>
    <string name="place_saved">Place saved</string>
    <string name="sms_permission_granted">SMS Permission has been granted.</string>
    <string name="read_contact_permission_granted">Contacts Permission has been granted. Contacts can now be accessed.</string>
    <string name="permission_not_granted">Permission were not granted.</string>
    <string name="map_permission_granted">Location Permission has been granted. Map can now be opened.</string>
    <string name="contact_removed">Contact removed</string>
    <string name="undo">Undo</string>
    <string name="smss_sent">SMS messages sent.</string>
    <string name="add_contact">Add contact</string>
    <string name="done">Done</string>
    <string name="send_sms">Send SMS</string>
    <string name="finish">Show target location</string>
    <string name="start">Go to current position</string>
    <string name="enable_gps">Enable GPS in system settings</string>
    <string name="destination_info">The notification will be shown upon reaching the destination.</string>
    <string name="value_20" translatable="false">20</string>
    <string name="value_50" translatable="false">50</string>
    <string name="value_100" translatable="false">100</string>
    <string name="value_500" translatable="false">500</string>
</resources>
