<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_between_content_areas"
    android:layout_marginLeft="@dimen/space_between_content_areas"
    android:layout_marginRight="@dimen/space_between_content_areas"
    card_view:cardCornerRadius="@dimen/card_corner_radius">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:animateLayoutChanges="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground">

            <com.google.android.gms.maps.MapView
                android:id="@+id/location_preview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_map_view_height"
                android:clickable="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_title_top_margin"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/base_margin"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginRight="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:textSize="@dimen/title"
                android:textColor="@color/colorPrimaryText"
                android:text="@string/chosen_place"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_between_content_areas"
                android:layout_marginLeft="@dimen/base_margin"
                android:layout_marginStart="@dimen/base_margin"
                android:layout_marginRight="@dimen/base_margin"
                android:layout_marginEnd="@dimen/base_margin"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/destination_info"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/base_margin"
            android:background="@color/divider"/>

        <RelativeLayout
            android:id="@+id/place_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_button_height"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/choose_place"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>